Fixed spacing at the top of the page on staging

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -567,40 +567,38 @@ rl-ka-refer-landing {
     width: 80%;
     position: relative;
     display: block;
-    padding-top: 40px; }
+    padding-top: 20px; }
     rl-ka-refer-landing masthead #ka-landing-masthead {
       overflow: hidden;
       cursor: default;
       margin-bottom: 20px; }
-      @media screen and (min-width: 768px) and (max-width: 1366px) {
+      @media screen and (min-width: 768px) and (max-width: 1275px) {
         rl-ka-refer-landing masthead #ka-landing-masthead {
           height: 250px; } }
     rl-ka-refer-landing masthead img {
       width: 100%; }
-      @media screen and (min-width: 768px) and (max-width: 1366px) {
+      @media screen and (min-width: 768px) and (max-width: 1275px) {
         rl-ka-refer-landing masthead img {
           width: 75%;
           margin: auto;
           position: absolute;
           left: 0px;
           right: 0px; } }
-    rl-ka-refer-landing masthead .ka-landing-title {
-      margin-top: 100px; }
-      @media screen and (max-width: 768px) {
-        rl-ka-refer-landing masthead .ka-landing-title {
-          margin-top: 0; } }
     rl-ka-refer-landing masthead .ka-landing-title h1 {
       text-transform: uppercase;
       font-weight: 100;
       font-size: 32px;
-      letter-spacing: 1px; }
+      letter-spacing: 1px;
+      margin-top: 125px; }
+      @media screen and (max-width: 1275px) {
+        rl-ka-refer-landing masthead .ka-landing-title h1 {
+          position: relative;
+          left: 12.5%; } }
       @media screen and (max-width: 768px) {
         rl-ka-refer-landing masthead .ka-landing-title h1 {
           text-align: center;
-          padding-bottom: 10px; } }
-      @media screen and (min-width: 768px) and (max-width: 1366px) {
-        rl-ka-refer-landing masthead .ka-landing-title h1 {
-          padding: 0 12.5%; } }
+          padding-bottom: 10px;
+          left: 0; } }
   rl-ka-refer-landing features .row {
     width: 100%;
     height: 300px;
@@ -737,6 +735,9 @@ rl-ka-refer-landing {
   rl-ka-refer-landing product-selector {
     width: 80%;
     position: relative; }
+    @media screen and (max-width: 1366px) {
+      rl-ka-refer-landing product-selector {
+        margin-top: -30px !important; } }
     rl-ka-refer-landing product-selector h2 {
       font-size: 3em;
       text-transform: uppercase;
