--- a/public/css/components/_masthead.scss
+++ b/public/css/components/_masthead.scss
@@ -2,7 +2,7 @@ masthead {
 	width: 80%;
 	position: relative;
 	display: block;
-	padding-top: 40px;
+	padding-top: 20px;
     
     #ka-landing-masthead {
         overflow: hidden;
